New Windows Games:
* 18 Wheels of Steel: Extreme Trucker - Contributed by AdmiringWorm
* 7554 - Contributed by AdmiringWorm
* Alan Wake - Steam only - Contributed by Arc Angel
* Angry Birds Space - Contributed by cheshhire
* APB Reloaded - Accounts, Settings, Statistics only - Contributed by AdmiringWorm
* B.A.D - Battle Armor Division - Contributed by Arc Angel
* Black Market - Contributed by Arc Angel
* Cities in Motion - Contributed by AdmiringWorm
* The Darkness II - Contributed by Arc Angel
* Deep Black Reloaded - Contributed by AdmiringWorm
* Depth Hunter - Contributed by Arc Angel
* Dungeon Siege III - Contributed by Arc Angel
* Kingdoms of Amalur: Reckoning - Steam only - Contributed by Arc Angel
* Legends of Grimrock - Contributed by Arc Angel
* Mass Effect 3 - Contributed by AdmiringWorm
* M.U.D. TV . Contributed by AdmiringWorm
* Payday: The Heist - Steam only - Contributed by Arc Angel
* Resident Evil 5 - Contributed by Arc Angel
* Sacred 2: Fallen Angel - Contributed by AdmiringWorm
* Terrorist Takedown 3 - Contributed by AdmiringWorm
* Thrillville Off The Rails - Contributed by AdmiringWorm
* Trackmania 2 Canyon - Contributed by AdmiringWorm
New Steam Games:
* AlternativA - Contributed by AdmiringWorm
* Saint's Row: The Third - Moved from windows.xml and Corrected to user steamuserdata
* Serious Sam 2 - Steam only - Contributed by Arc Angel
* Stacking - Contributed by AdmiringWorm
* Syndicate (2012) - Contributed by Arc Angel
* Terrorist Takedown 3 - Contributed by AdmiringWorm
* Thrillville Off The Rails - Contributed by AdmiringWorm
* Turok (2008) - Contributed by Arc Angel
* Trine 2 - Steam only - Contributed by Arc Angel
* Wolfenstein - Contributed by Arc Angel
Updated Windows Games:
* CSI: NY The Game - Fixed path
* The Sims 2 - Added Settings type - Contributed by AdmiringWorm
* The Sims 3 - Added multiple new types - Contributed by AdmiringWorm
* Thief: Deadly Shadows - Added Steam path - Contributed by Arc Angel
* Uplink - Added Settings type