@@ -1,4 +1,8 @@
 New Windows Games:
+* Alan Wake - GoG only
+* Dinner Date - Steam only
+=2012/5/21=
+New Windows Games:
 * 18 Wheels of Steel: Extreme Trucker - Contributed by AdmiringWorm
 * 7554 - Contributed by AdmiringWorm
 * Alan Wake - Steam only - Contributed by Arc Angel
